# cleaning-talent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  railway.toml  vercel.json
.claude-sync/: CHANGE-LOG.md  CODE-OWNERSHIP.md  DEPENDENCY-TREE.md  PROGRESS-BOARD.md  SESSION-LOG.md  SHARED-CONTEXT.md  task-card-R01-architect.md  task-card-R02-database.md  task-card-R03-backend.md  task-card-R04-frontend.md  task-card-R05-ai-engineer.md  task-card-R06-devops.md
ai-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ai-service/app/: __init__.py  config.py  main.py
ai-service/app/api/: health.py  qa.py
ai-service/app/models/: __init__.py
ai-service/app/services/: conversation_service.py  llm_service.py
ai-service/app/utils/: __init__.py
backend/: Dockerfile  README.md  pom.xml
docs/: api-spec.md  architecture.md  database-design.md  deployment-plan.md
frontend/: .env.development  .env.example  .env.production  .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: ai.ts  auth.ts  course.ts  learning.ts  points.ts
frontend/src/components/: CourseCard.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/types/: index.ts
frontend/src/utils/: request.ts
frontend/src/views/: AIChat.vue  CourseDetail.vue  CourseList.vue  Learning.vue  (+6 more)
scripts/: check-status.sh  deploy-railway.sh  deploy-to-aliyun.sh  deploy-vercel.sh  init-database.sh  setup-sync-folder.sh
(+46 files in other folders)
